done some more work

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,21 @@
+@book{Szeliski2011,
+abstract = {As humans, we perceive the three-dimensional structure of the world around us with apparent ease. However, despite all of the recent advances in computer vision research, the dream of having a computer interpret an image at the same level as a two-year old remains elusive. Why is computer vision such a challenging problem, and what is the current state of the art?Computer Vision: Algorithms and Applications explores the variety of techniques commonly used to analyze and interpret images. It also describes challenging real-world applications where vision is being successfully used, both for specialized applications such as medical imaging and fun consumer-level tasks such as image editing and stitching, which students can apply to their own personal photos and videos.More than just a source of "recipes", this text/reference also takes a scientific approach to basic vision problems, formulating physical models of the imaging process before inverting this process to produce the best possible descriptions of a scene. Exercises are presented throughout the book, with a heavy emphasis on testing algorithms.Suitable for either an undergraduate or a graduate-level course in computer vision, this textbook focuses on basic techniques that work under real-world conditions and encourages students to push their creative boundaries.Dr. Richard Szeliski has over twenty years' experience in computer vision research, most notably at Digital Equipment Corporation and Microsoft.},
+address = {London},
+author = {Szeliski, Richard},
+booktitle = {Computer},
+doi = {10.1007/978-1-84882-935-0},
+file = {:Users/tiao/Documents/Mendeley Desktop/Szeliski/2011/Szeliski\_2011\_Computer Vision.pdf:pdf},
+isbn = {978-1-84882-934-3},
+issn = {10636919},
+pages = {832},
+pmid = {16259003},
+publisher = {Springer London},
+series = {Texts in Computer Science},
+title = {{Computer Vision}},
+url = {http://research.microsoft.com/en-us/um/people/szeliski/book/drafts/szelski\_20080330am\_draft.pdf http://link.springer.com/10.1007/978-1-84882-935-0},
+volume = {5},
+year = {2011}
+}
 @inproceedings{Ignjatovic2011,
 author = {Ignjatovic, Aleksandar},
 booktitle = {UNSW Applied Mathematics Seminar},
@@ -24,6 +42,20 @@ title = {{Navier-stokes, fluid dynamics, and image and video inpainting}},
 url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=990497},
 volume = {1},
 year = {2001}
+}
+@article{Telea2004,
+author = {Telea, Alexandru},
+doi = {10.1080/10867651.2004.10487596},
+file = {:Users/tiao/Documents/Mendeley Desktop/Telea/2004/Telea\_2004\_An Image Inpainting Technique Based on the Fast Marching Method.pdf:pdf},
+issn = {1086-7651},
+journal = {Journal of Graphics Tools},
+month = jan,
+number = {1},
+pages = {23--34},
+title = {{An Image Inpainting Technique Based on the Fast Marching Method}},
+url = {http://www.tandfonline.com/doi/abs/10.1080/10867651.2004.10487596},
+volume = {9},
+year = {2004}
 }
 @inproceedings{Bertalmio2000,
 address = {New York, New York, USA},
@@ -67,18 +99,4 @@ title = {{Chromatic Derivatives and Local Approximations}},
 url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=4813249},
 volume = {57},
 year = {2009}
-}
-@article{Telea2004,
-author = {Telea, Alexandru},
-doi = {10.1080/10867651.2004.10487596},
-file = {:Users/tiao/Documents/Mendeley Desktop/Telea/2004/Telea\_2004\_An Image Inpainting Technique Based on the Fast Marching Method.pdf:pdf},
-issn = {1086-7651},
-journal = {Journal of Graphics Tools},
-month = jan,
-number = {1},
-pages = {23--34},
-title = {{An Image Inpainting Technique Based on the Fast Marching Method}},
-url = {http://www.tandfonline.com/doi/abs/10.1080/10867651.2004.10487596},
-volume = {9},
-year = {2004}
 }
