added figures, notebook, etc

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -100,3 +100,21 @@ url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=4813249},
 volume = {57},
 year = {2009}
 }
+@book{Stein2000,
+author = {Stein, Jonathan Y.},
+isbn = {0471295469},
+mendeley-groups = {Honours Thesis (2.0)},
+month = aug,
+publisher = {John Wiley \& Sons, Inc.},
+title = {{Digital Signal Processing: A Computer Science Perspective}},
+url = {http://dl.acm.org/citation.cfm?id=517927},
+year = {2000}
+}
+@misc{Weisstein,
+author = {Weisstein, Eric W.},
+publisher = {Wolfram Research, Inc.},
+title = {{Kronecker Delta} {From MathWorld--A Wolfram Web Resource.}},
+url = {http://mathworld.wolfram.com/KroneckerDelta.html},
+urldate = {21/10/14}
+}
+
